[package]
name = "ad57xx"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Analog Devices AD57xx SPI DAC driver"
homepage = "https://github.com/deltronix/ad57xx"
repository = "https://github.com/deltronix/ad57xx"
readme = "README.md"
categories = ["embedded", "no-std"]
keywords = ["spi", "embedded-hal", "driver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.5.6"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0", features = ["defmt-03"] }
embedded-hal-bus = { version = "0.1.0", features = ["defmt-03"] }


[dev-dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-halt = "0.2.0"
panic-probe = { version = "0.3.0", features = [ "print-defmt" ] }
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f405"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

